Dashboard: Fixes Nic tooltip overflow and other positioning issues
Fixes tooltip position and content alignment inside tooltip
Fixes text overflow in NIC tooltip

Bug-Url: https://bugzilla.redhat.com/1222477
Bug-Url: https://bugzilla.redhat.com/1231146

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -196,3 +196,27 @@ a:hover {
   padding-bottom: 20px;
   padding-top: 50px;
 }
+
+.tooltip-wrapper {
+  min-width: 200px;
+  position:relative;
+  width:auto;
+}
+.usage{
+  clear:both;
+  width:25%;
+  float:left;
+  font-weight: bold;
+  position:relative;
+  padding-right:5px;
+}
+.usage-entity{
+  width:75%;
+  float:left;
+  position:relative;
+  padding-left:5px;
+}
+.nic-tooltip{
+  max-height:100px;
+  overflow: auto;
+}
